--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -4,77 +4,78 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fundo"
-    tools:context="victor.machado.com.br.registro.CadastroActivity">
+    android:background="@color/colorBackground"
+    tools:context="telas.CadastroActivity">
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="385dp"
-        android:layout_height="214dp"
-        android:layout_alignParentTop="true"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:srcCompat="@drawable/logo"
-        tools:layout_editor_absoluteY="-61dp" />
-
-    <EditText
-        android:id="@+id/cadastroNomeId"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="Digite seu nome"
-        android:textColor="@color/colorAccent"
-        android:textColorHint="@color/colorPrimary"
-        android:layout_below="@+id/imageView3"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:padding="8dp"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/cadastroEmailId"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/cadastroNomeId"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="Digite seu e-mail"
-        android:textColor="@color/colorAccent"
-        android:textColorHint="@color/colorPrimary"/>
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="385dp"
+                android:layout_height="214dp"
+                app:srcCompat="@drawable/logo" />
 
-    <EditText
-        android:id="@+id/cadastroSenhaId"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/cadastroEmailId"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:hint="Digite sua senha"
-        android:textColor="@color/colorAccent"
-        android:textColorHint="@color/colorPrimary"/>
+            <EditText
+                android:id="@+id/cadastroNomeId"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edittext_style"
+                android:hint="Digite seu nome"
+                android:inputType="textPersonName"
+                android:textColor="@color/colorAccent"
+                android:textColorHint="@color/colorPrimary" />
 
-    <Button
-        android:id="@+id/cadastrarBotaoId"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/cadastroSenhaId"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:background="@color/colorPrimaryDark"
-        android:text="Cadastrar"
-        android:textColor="@android:color/white" />
+            <EditText
+                android:id="@+id/cadastroEmailId"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/cadastroNomeId"
+                android:layout_marginTop="@dimen/distancia"
+                android:background="@drawable/edittext_style"
+                android:hint="Digite seu e-mail"
+                android:inputType="textPersonName"
+                android:textColor="@color/colorAccent"
+                android:textColorHint="@color/colorPrimary" />
 
-    <TextView
-        android:id="@+id/loginId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/cadastrarBotaoId"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="13dp"
-        android:textColor="@color/colorPrimary"
-        android:text="Já sou registrado" />
+            <EditText
+                android:id="@+id/cadastroSenhaId"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/distancia"
+                android:background="@drawable/edittext_style"
+                android:hint="Digite sua senha"
+                android:inputType="textPassword"
+                android:textColor="@color/colorAccent"
+                android:textColorHint="@color/colorPrimary" />
 
+            <Button
+                android:id="@+id/cadastrarBotaoId"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/cadastroSenhaId"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/button_style"
+                android:text="Cadastrar"
+                android:textColor="@android:color/white" />
+
+            <TextView
+                android:id="@+id/loginId"
+                android:layout_width="match_parent"
+                android:textAlignment="center"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/cadastrarBotaoId"
+                android:layout_marginTop="13dp"
+                android:text="Já sou registrado"
+                android:textColor="@color/colorPrimary"
+                tools:ignore="RtlCompat" />
+        </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
