--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/background_light"
-    tools:context="victor.machado.com.br.registro.SplashScreen">
+    tools:context="telas.SplashScreen">
 
     <com.felipecsl.gifimageview.library.GifImageView
         android:id="@+id/gifRegistro"
