--- a/app/src/main/res/layout/activity_confirma.xml
+++ b/app/src/main/res/layout/activity_confirma.xml
@@ -4,145 +4,123 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fundo"
-    tools:context="victor.machado.com.br.registro.ConfirmaActivity">
+    tools:context="telas.ConfirmaActivity">
 
 <include android:id="@+id/toolbar"
         layout="@layout/toolbar"/>
 
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <Button
-        android:id="@+id/botaoSim"
-        android:layout_width="@dimen/largura_Botao"
-        android:layout_height="@dimen/altura_Botao"
-        android:layout_marginEnd="33dp"
-        android:layout_marginRight="33dp"
-        android:background="@color/colorPrimaryDark"
-        android:text="Sim"
-        android:textColor="@android:color/white"
-        android:layout_marginBottom="28dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-</RelativeLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="49dp"
-        android:layout_marginEnd="49dp"
-        android:id="@+id/relativeLayout">
-
-
-
-        <Button
-            android:id="@+id/botaoNao"
-            android:layout_width="@dimen/largura_Botao"
-            android:layout_height="@dimen/altura_Botao"
-            android:layout_marginLeft="26dp"
-            android:layout_marginStart="26dp"
-            android:background="@color/colorPrimaryDark"
-            android:paddingHorizontal="20dp"
-            android:text="Não"
-            android:textColor="@android:color/white"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginBottom="29dp" />
-
-
-    </RelativeLayout>
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="58dp"
-        android:text="@string/textoConfirma"
+    <ScrollView
         android:layout_below="@+id/toolbar"
-        android:textSize="18dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:textColor="@color/colorPrimaryDark"
-        />
-
-    <TextView
-        android:id="@+id/confirmaEnd"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView"
-        android:layout_marginTop="29dp"
-        android:paddingLeft="8dp"
-        android:textColor="@color/colorAccent"
-        android:textSize="16dp" />
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/confirmaNome"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="31dp"
-        android:textColor="@color/colorAccent"
-        android:paddingLeft="8dp"
-        android:textSize="16dp"
-        android:layout_below="@+id/confirmaEnd"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        <LinearLayout
+            android:padding="8dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/confirmaRg"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="35dp"
-        android:textColor="@color/colorAccent"
-        android:paddingLeft="8dp"
-        android:textSize="16dp"
-        android:layout_below="@+id/confirmaNome"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="@string/textoConfirma"
+                android:layout_below="@+id/toolbar"
+                android:textSize="20dp"
+                android:textColor="@color/colorPrimaryDark" />
 
-    <TextView
-        android:id="@+id/confirmaCpf"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="8dp"
-        android:textSize="16dp"
-        android:textColor="@color/colorAccent"
-        android:layout_marginTop="36dp"
-        android:layout_below="@+id/confirmaRg"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+            <TextView
+                android:id="@+id/confirmaEnd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edittext_style"
+                android:layout_marginTop="@dimen/distancia"
+                android:paddingLeft="8dp"
+                android:textColor="@color/colorAccent"
+                android:textSize="16dp" />
 
-    <TextView
-        android:id="@+id/confirmaCelular"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="8dp"
-        android:textSize="16dp"
-        android:textColor="@color/colorAccent"
-        android:layout_marginTop="39dp"
-        android:layout_below="@+id/confirmaCpf"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+            <TextView
+                android:id="@+id/confirmaNome"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/distancia"
+                android:background="@drawable/edittext_style"
+                android:textColor="@color/colorAccent"
+                android:textSize="16dp"
+                android:layout_below="@+id/confirmaEnd"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
 
-    <TextView
-        android:id="@+id/confirmaResponsabilidade"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:paddingLeft="8dp"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/confirmaCelular"
-        android:layout_marginTop="41dp"
-        android:textSize="16dp"
-        android:textColor="@color/colorAccent"
-        />
+            <TextView
+                android:id="@+id/confirmaRg"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edittext_style"
+                android:layout_marginTop="@dimen/distancia"
+                android:textColor="@color/colorAccent"
+                android:textSize="16dp"
+                android:layout_below="@+id/confirmaNome"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <TextView
+                android:id="@+id/confirmaCpf"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="16dp"
+                android:textColor="@color/colorAccent"
+                android:background="@drawable/edittext_style"
+                android:layout_marginTop="@dimen/distancia"
+                android:layout_below="@+id/confirmaRg"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <TextView
+                android:id="@+id/confirmaCelular"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="16dp"
+                android:textColor="@color/colorAccent"
+                android:background="@drawable/edittext_style"
+                android:layout_marginTop="@dimen/distancia"
+                android:layout_below="@+id/confirmaCpf"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <TextView
+                android:id="@+id/confirmaResponsabilidade"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/confirmaCelular"
+                android:background="@drawable/edittext_style"
+                android:layout_marginTop="@dimen/distancia"
+                android:textSize="16dp"
+                android:textColor="@color/colorAccent"
+                />
+
+            <Button
+                android:id="@+id/botaoNao"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/button_white_style"
+                android:layout_marginTop="@dimen/distancia"
+                android:paddingHorizontal="20dp"
+                android:text="Não"
+                android:textColor="@color/colorPrimaryDark" />
+
+            <Button
+                android:id="@+id/botaoSim"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/distancia"
+                android:background="@drawable/button_style"
+                android:text="Sim"
+                android:textColor="@android:color/white" />
+        </LinearLayout>
+    </ScrollView>
 
 </RelativeLayout>
