--- a/app/src/main/res/menu/menu_confirma.xml
+++ b/app/src/main/res/menu/menu_confirma.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".ConfirmaActivity">
+    xmlns:tools="http://schemas.android.com/tools" tools:context="telas.ConfirmaActivity">
 
     <item android:id="@+id/itemConfiguracoes" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never"/>
@@ -12,11 +12,6 @@
     <item android:id="@+id/item_lista" android:title="Lista"
         android:orderInCategory="300" app:showAsAction="ifRoom"
         android:icon="@drawable/ic_library_books"
-        />
-
-    <item android:id="@+id/item_sincroniza" android:title="Sincronizar"
-        android:orderInCategory="400" app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_autorenew"
         />
 
 </menu>
