--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryLighting">#5CCDFF</color>
     <color name="colorPrimaryDark">#02323f</color>
     <color name="colorAccent">#08597c</color>
+    <color name="colorBackground">#eaeaea</color>
 </resources>
