--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,8 +2,9 @@
 <resources>
     <dimen name="largura_logo">385dp</dimen>
     <dimen name="altura_logo">214dp</dimen>
-    <dimen name="largura_Campo">190dp</dimen>
+    <dimen name="largura_Campo">300dp</dimen>
     <dimen name="largura_Botao">100dp</dimen>
     <dimen name="altura_Botao">70dp</dimen>
     <dimen name="imagem_Documento">200dp</dimen>
+    <dimen name="distancia">8dp</dimen>
 </resources>
