Adicionando imagens ao doc

--- a/app/src/main/res/layout/activity_listar_docs.xml
+++ b/app/src/main/res/layout/activity_listar_docs.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/toolbar"
-        android:divider="@color/colorAccent"
+        android:divider="@android:color/darker_gray"
         android:dividerHeight="@dimen/cardview_default_radius"
         android:padding="8dp"/>
 
