--- a/app/src/main/res/layout/activity_configuracoes.xml
+++ b/app/src/main/res/layout/activity_configuracoes.xml
@@ -10,56 +10,63 @@
     <include android:id="@+id/toolbar"
         layout="@layout/toolbar" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:textColor="@color/colorAccent"
-        android:layout_marginTop="7dp"
-        android:text="Servidor"
-        android:textSize="24sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+    <ScrollView
+        android:layout_below="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="367dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:textColor="@color/colorAccent"
-        android:layout_marginTop="8dp"
-        android:text="Registro"
-        android:textSize="24sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        android:layout_marginStart="16dp" />
+        <LinearLayout
+            android:gravity="center_horizontal"
+            android:padding="8dp"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="7dp"
-        android:text="Suporte"
-        android:textColor="@color/colorAccent"
-        android:textSize="24sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+            <TextView
+                android:id="@+id/textView2"
+                android:textAlignment="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorAccent"
+                android:text="Servidor"
+                android:textSize="24sp"
+                tools:ignore="RtlCompat"
+                android:layout_marginTop="@dimen/distancia"/>
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:text="Armazenamento"
-        android:textColor="@color/colorAccent"
-        android:textSize="24sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                tools:ignore="RtlCompat"
+                android:text="Suporte"
+                android:textColor="@color/colorAccent"
+                android:layout_marginTop="@dimen/distancia"
+                android:textSize="24sp" />
 
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Armazenamento"
+                android:textAlignment="center"
+                tools:ignore="RtlCompat"
+                android:textColor="@color/colorAccent"
+                android:layout_marginTop="@dimen/distancia"
+                android:textSize="24sp" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                tools:ignore="RtlCompat"
+                android:layout_marginLeft="16dp"
+                android:textColor="@color/colorAccent"
+                android:layout_marginTop="@dimen/distancia"
+                android:text="Registro"
+                android:textSize="24sp" />
+
+        </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
